--- a/package.json
+++ b/package.json
@@ -8,5 +8,15 @@
     "start": "nodemon main.js"
   },
   "author": "Aaron Snowberger",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "express-ejs-layouts": "^2.5.1",
+    "http-status-code": "^2.1.0",
+    "http-status-codes": "^2.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
